Backend authentication foundation -- firebase not implemented fully yet
